# rust-telegram-tiktok-bot

./: .env.example  Cargo.toml  README.md
.claude/: settings.local.json
src/: config.rs  error.rs  main.rs
src/bot/: caption.rs  compressor.rs  handlers.rs  mod.rs  notifier.rs  progress.rs
src/security/: download_guard.rs  inflight_tracker.rs  mod.rs  rate_limiter.rs  retry.rs  temp_cleaner.rs  url_validator.rs  user_queue.rs
src/tiktok/: api_client.rs  detector.rs  downloader.rs  mod.rs  models.rs
