[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4"
config = "0.15.19"
dashmap = "6"
dotenvy = "0.15.7"
futures = "0.3"
governor = "0.8"
nonzero_ext = "0.3"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "stream", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
teloxide = "0.17.0"
tempfile = "3.26.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5.8"

[dev-dependencies]
rstest = "0.25"
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
